# chat-core

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  chat-cli-research.md  chat-core-design.md  chat-engine-archive.md  pyproject.toml
.specify/: feature.json
chat_core/: cli.py  config.py  config.yaml  qq_bot.py
chat_core/core/: brain.py  history.py  loop.py  prompt_engine.py  provider.py  safety.py  tools.py  turn_manager.py  types.py
chat_core/prompts/: persona.yaml  rules.yaml  tools.yaml
chat_core/qq/: __init__.py  adapter.py  protocol.py  race_tracker.py  sessions.py  subconscious.py
chat_core/systems/: __init__.py  attention.py  boredom.py  creativity.py  defense.py  emotion.py  energy.py  group_dynamics.py  humor.py  interest.py  intuition.py  loneliness.py  memory.py  metacognition.py  moral.py  motivation.py  multimodal.py  narrative.py  patterns.py  personality.py  proactive.py  relationship.py  review.py  silence.py  subjective_time.py  values.py
specs/001-chat-core-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  spec_e2e_test.py  test_brain.py  test_compound_emotion.py  test_config.py  test_creativity.py  test_defense.py  test_design_alignment.py  test_energy.py  test_group_dynamics.py  test_humor.py  test_intuition.py  test_loop.py  test_memory.py  test_metacognition.py  test_moral.py  test_motivation.py  test_narrative.py  test_patterns.py  test_phase6_emotion.py  test_qq_protocol.py  test_qq_sessions.py  test_relationship.py  test_silence.py  test_subjective_time.py  test_values.py
(+44 files in other folders)
